# XiamiAPI

./: .gitignore  .gitmodules  CMakeLists.txt  GenericArray.cpp  GenericArray.h  README.md  global.h  iunknown.cpp  iunknown.h  keynotfoundexception.cpp  keynotfoundexception.h  needvalidationexception.cpp  needvalidationexception.h  networkexception.cpp  networkexception.h  str.cpp  str.h  stringutilities.cpp  stringutilities.h  xiamiapi.cpp  xiamiapi.h  xiamiapi_impl.cpp  xiamiapi_impl.h
test/: apitest.cpp
